cluster/apps/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.heymann.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: kube.heymann.dev
  selector:
    app.kubernetes.io/instance: kps
    app.kubernetes.io/name: grafana
  sessionAffinity: None
